## Process this file with automake to create Makefile.in

noinst_LTLIBRARIES = libgambit_poly.la

AM_CPPFLAGS = -I$(top_srcdir)/sources

polyincludedir = $(includedir)/gambit-$(VERSION)/gambit/poly
polyinclude_HEADERS = \
	gpartltr.h \
	gpartltr.imp \
	gpoly.h \
	gpoly.imp \
	gpolylst.h \
	gpolylst.imp \
	gsolver.h \
	gsolver.imp \
	ideal.h \
	ideal.imp \
	ineqsolv.h \
	ineqsolv.imp \
	interval.h \
	monomial.h \
	monomial.imp \
	poly.h \
	poly.imp \
	prepoly.h \
	quiksolv.h \
	quiksolv.imp \
	rectangl.h \
	rectangl.imp

libgambit_poly_la_SOURCES = \
	gpartltr.cc \
	gpartltr.h \
	gpartltr.imp \
	gpoly.cc \
	gpoly.h \
	gpoly.imp \
	gpolylst.cc \
	gpolylst.h \
	gpolylst.imp \
	gsolver.cc \
	gsolver.h \
	gsolver.imp \
	ideal.cc \
	ideal.h \
	ideal.imp \
	ineqsolv.cc \
	ineqsolv.h \
	ineqsolv.imp \
	interval.h \
	monomial.cc \
	monomial.h \
	monomial.imp \
	pelclass.cc \
	pelclass.h \
	poly.cc \
	poly.h \
	poly.imp \
	prepoly.cc \
	prepoly.h \
	quiksolv.cc \
	quiksolv.h \
	quiksolv.imp \
	rectangl.cc \
	rectangl.h \
	rectangl.imp

EXTRA_DIST = borland.mak





