## Process this file with automake to create Makefile.in

lib_LTLIBRARIES = liblabenski.la

AM_CPPFLAGS = -I../include ${WX_CXXFLAGS}

liblabenski_la_SOURCES = \
	sheetatr.cpp \
	sheet.cpp \
	sheetedg.cpp \
	sheetedt.cpp \
	sheetren.cpp \
	sheetsel.cpp \
	sheetspt.cpp \
	sheettbl.cpp \
	block.cpp \
	bmpcombo.cpp \
	dropdown.cpp \
	genergdi.cpp \
	geometry.cpp \
	grid.cpp \
	menubtn.cpp \
	optvalue.cpp \
	range.cpp \
	spinctld.cpp \
	toggle.cpp

liblabenski_la_LDFLAGS = $(WX_LIBS)